@@ -32,8 +32,8 @@ public class MisuraFacade {
 
 		logger.info("START MisuraFacade.execute");
 
-		List<DmalmMisura> misureStg = new ArrayList<DmalmMisura>();
-		List<Tuple> target = new ArrayList<Tuple>();
+		List<DmalmMisura> misureStg = new ArrayList<>();
+		List<Tuple> target = new ArrayList<>();
 		QDmalmMisura misura = QDmalmMisura.dmalmMisura;
 
 		int righeNuove = 0;
@@ -47,11 +47,11 @@ public class MisuraFacade {
 
 		try {
 			misureStg = DmAlmMisuraDAO.getAllMisure(dataEsecuzione);
-
+			logger.info("misureStg.size() :"+ misureStg.size());
 			for (DmalmMisura misure : misureStg) {
 				misuraTmp = misure;
 				target = DmAlmMisuraDAO.getMisura(misure);
-
+				logger.info(misure.getIdMsr() + " - "+ misure.getIdProgetto() + " - " + misure.getIdAsm());
 				// Uso il campo Annullato in quanto i campo applicazione non
 				// esiste
 				String parApplicazione = misure.getAnnullato();
@@ -70,8 +70,9 @@ public class MisuraFacade {
 
 				if (target.size() == 0 && !misure.getNomeMisura().startsWith("UFFICIOSO-")) {
 					righeNuove++;
-
-					DmAlmMisuraDAO.insertMisure(dataEsecuzione, misure);
+					
+					logger.info("target.size() : "+target.size());
+					DmAlmMisuraDAO.insertMisure(misure);
 
 					rinascitaFisicaMisura(dataEsecuzione, misure,
 							parApplicazione, misure.getProgettoSfera());
@@ -146,7 +147,7 @@ public class MisuraFacade {
 
 							if (modificato) {
 								righeModificate++;
-
+								logger.info("righe modificate!");
 								// STORICIZZO
 								// aggiorno la data di fine validita sul record
 								// corrente
@@ -155,10 +156,10 @@ public class MisuraFacade {
 
 								// inserisco un nuovo record
 
-								DmAlmMisuraDAO.insertMisure(dataEsecuzione,
-										misure);
+								DmAlmMisuraDAO.insertMisure(misure);
 							} else {
 								// Aggiorno lo stesso
+								logger.info("righe non modificate!");
 								DmAlmMisuraDAO.updateMisura(misure);
 							}
 						}
@@ -182,6 +183,7 @@ public class MisuraFacade {
 			dtFineCaricamento = new Date();
 
 			try {
+				logger.info("esito ok!");
 				EsitiCaricamentoDAO.insert(dataEsecuzione,
 						DmAlmConstants.TARGET_MISURA, stato, new Timestamp(
 								dtInizioCaricamento.getTime()), new Timestamp(
@@ -390,11 +392,10 @@ public class MisuraFacade {
 						// aggiorno la data di fine validita sul record
 						// corrente
 						DmAlmMisuraDAO.updateRankMisura(misuraRinascita,
-								new Double(0));
+								Double.valueOf(0));
 
 						// inserisco un nuovo record
-						DmAlmMisuraDAO.insertMisure(dataEsecuzione,
-								misuraRinascita);
+						DmAlmMisuraDAO.insertMisure(misuraRinascita);
 
 					}
 				}
